--- a/index.html
+++ b/index.html
@@ -55,31 +55,31 @@
 <h3 id="skills">Aficiones</h3>
   <section class="one-thrird">
      <div class="icon-wrap">
-       <i class="fa fa-file-code-o"></i>
+       <i class="fa fa-video-camera"></i>
      </div>
-     <h3>Desarrollo</h3>
-     <p>Desarrollo de diversos contenidos no solo a travez de la programacion si no tambien por mediod de software grafio y de auidio-video unas de mis metas es el poder crear contenido de calidad y con profesionalismo pero antes tengo que aprender lo maximo posible.</p>
+     <h3>Peliculas</h3>
+     <p>Las peliculas son uno de mis aficones el cual adoro mucho, actualmente los generos que me gustan son  el de terror, comedia, drama y romance, me encanta cuando en una pelicula termina con un final misterioso.</p>
   </section>
   <section class="one-thrird" id="Skills">
     <div class="icon-wrap">
       <i class="fa fa-headphones"></i>
     </div>
     <h3>Música</h3>
-    <p>Siempre me la he pasado con mis audifonos, es una de mis grandes aficiones siempre que puedo hao las cosas con musica es lago que me relaja aunque no escucho la tipica el genero mas actual que he escuchado es el lo-fi hip-hop.</p>
+    <p>Para la musica tengo bastantes tipos y generos de musica, pero mi favorita entre todos es la musica house, siempre me ha gustando ya que desde muy pequeña escuchaba con mis primos.</p>
   </section>
   <section class="one-thrird" id="skills">
     <div class="icon-wrap">
-      <i class="fa fa-gamepad"></i>
+      <i class="fa fa-star"></i>
     </div>
-    <h3>Videojuegos</h3>
-    <p>Otra de mis actividades favoritas los videojuegos todo empezo con una computadora y esos Lectores de DVD en los culaes podias jugar unos videojuegos, mi primera consola real fue un Nintendo Gamecube con la cual la pase bien de niño.</p>
+    <h3>Pasatiempos</h3>
+    <p>En mis pasatiempos tengo muchas actividades como dibujar, cantar, cocinar, dibujar y lo que mas me gusta hacer es resolver problemas de matematica.</p>
   </section>
   <section class="one-thrird" id="skills">
     <div class="icon-wrap">
-      <i class="fa fa-bicycle"></i>
+      <i class="fa fa-pencil-square-o"></i>
     </div>
-    <h3>MTB</h3>
-    <p>El ciclismo es un deporte que lo practicaria todo el dia si pudiera desde que consegui mi primera bicicleta recori varios kilometros y aprendi un poco de su mecanica, claro esta que tuve unas cuantas caidas y termine aruinando una que otra bicicleta pero siempre sigo practicandolo cuando puedo.</p>
+    <h3>Dibujos</h3>
+    <p>El dibujo es algo en el cual me especializo muy bien siempre en mis tiempos libres me la paso dibujando cualquier cosa que se me venga a la mente.</p>
   </section>
   <div class="clearfix-padding"></div>
   <!--Slider-->
