--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
   <!--Slider-->
   <section class="slider-wrap">
     <ul class="slider1"> 
-        <li><img src="img/pics/Slider/SLADER 1.jpg" alt="Descripcion"></li>
-        <li><img src="img/pics/Slider/SLADER 2.jpg" alt="Descripcion"></li>
-        <li><img src="img/pics/Slider/SLADER 3.jpg" alt="Descripcion"></li>
+        <li><img src="img/pics/Slider/kitty.avif" alt="Descripcion"></li>
+        <li><img src="img/pics/Slider/pou.webp" alt="Descripcion"></li>
+        <li><img src="img/pics/Slider/kuromi.webp" alt="Descripcion"></li>
     </ul>  
   </section> 
   <!--Portfolio-->
