--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <!--Portfolio-->
 <section class="left-col" id="portfolio">
    <h3>Acerca de mi</h3>
-      <p>De 19 años de edad, nacio en Salama B.V actualmente estudiante de Universidad de la carrera de Ingenieria en Sistemas con algunas cuantas aficiones, esperando poder ser desarrollador y creador de contenido.</p>
+      <p>Soy una chica de 16 años de edad, actualmente estoy estudiando un bachillerato en Computación, mi meta a llegar es graduarme de bachillerato, me gusta el cafe, salir con amigos, me considero una persona tranquila.</p>
 </section>
 <section class="sidebar">
    <img src="img/pics/myf.jpg" alt="Descripcion">
@@ -102,19 +102,19 @@
 <!--Text2-->
 <h3 id="services">Habilidades que deseo adquirir</h3>
   <div class="one-thrird-padding">
-      <h3>Utilizar Unity</h3>
+      <h3>Danza</h3>
       <img src="img/pics/Zone.png" alt="Descripcion">
-      <p>Iniciar con pequeños proyectos en los cuales diseñe y cree todos los componentes del videojuego.</p>
+      <p>Una de las habilidades que deseo obtener es el de poder bailar bien y que enfrente de varias personas no me de pena hacerlo.</p>
   </div>
   <div class="one-thrird-padding" id="services">
-    <h3>Creacion y diseño</h3>
+    <h3>Canto</h3>
     <img src="img/pics/Diseño.jpg" alt="Descripcion">
-    <p>Crear ecenarios, personajes y diferentes recursos en software grafico y de video.</p>
+    <p>Desde muy pequeño siempre he querido aprender a canatar ya que mi vos no me ayuda desearía poder afinarla bien y poder cantar lo que yo quiera.</p>
   </div>
   <div class="one-thrird-padding" id="services">
-    <h3>Innovación</h3>
+    <h3>Programar</h3>
     <img src="img/pics/Desarrollo.jpg" alt="Descripcion">
-    <p>Tener nuevos conceptos y prespectivas distintas pero conservando lo necesario y lo que no necesita cambios.</p>
+    <p>Lo que siempre me a llamado la atención es el de poder programar, fue una de las razones por la cual decidi estudiar computación.</p>
   </div>
 <!--Selec Social-->
   <footer>
