--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
 <h3 id="services">Habilidades que deseo adquirir</h3>
   <div class="one-thrird-padding">
       <h3>Danza</h3>
-      <img src="img/pics/Zone.png" alt="Descripcion">
+      <img src="img/pics/danza.webp" alt="Descripcion">
       <p>Una de las habilidades que deseo obtener es el de poder bailar bien y que enfrente de varias personas no me de pena hacerlo.</p>
   </div>
   <div class="one-thrird-padding" id="services">
     <h3>Canto</h3>
-    <img src="img/pics/Diseño.jpg" alt="Descripcion">
+    <img src="img/pics/canto.png" alt="Descripcion">
     <p>Desde muy pequeño siempre he querido aprender a canatar ya que mi vos no me ayuda desearía poder afinarla bien y poder cantar lo que yo quiera.</p>
   </div>
   <div class="one-thrird-padding" id="services">
     <h3>Programar</h3>
-    <img src="img/pics/Desarrollo.jpg" alt="Descripcion">
+    <img src="img/pics/progra.jpg" alt="Descripcion">
     <p>Lo que siempre me a llamado la atención es el de poder programar, fue una de las razones por la cual decidi estudiar computación.</p>
   </div>
 <!--Selec Social-->
